Fixed div overlapping header

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,7 @@ body, html {
 
     
 }
+
+#app > .header {
+    z-index: 1;
+}
