--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     position: fixed;
     background-color: #FCEED8;
-    z-index: 999px;
+    z-index: 1px;
     top: 0;
     width: 100%;
     box-shadow: 0px 3px 8px -9px rgba(0, 0, 0, 75); 
