--- a/src/Pages/Welcome.css
+++ b/src/Pages/Welcome.css
@@ -6,8 +6,7 @@
     text-align: center;
     padding-top: 10%;
     padding-bottom: 25%;
-    position:relative;
-    z-index: -1;
+    z-index: 0px;
     
 }
 
